--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/behandelingen">Behandelingen</a>
-  <a routerLink="/tarieven">Tarieven</a>
-  <a routerLink="/about">Over mij</a>
-  <a routerLink="/contact">Contact</a>
-</nav>
+<navigation-bar></navigation-bar>
 
 <router-outlet></router-outlet>
