changed name of behandelingencomponent to werkwijzecomponent

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav>
   <a routerLink="/home">Home</a>
-  <a routerLink="/behandelingen">Behandelingen</a>
+  <a routerLink="/werkwijze">Werkwijze</a>
   <a routerLink="/tarieven">Tarieven</a>
   <a routerLink="/about">Over mij</a>
   <a routerLink="/contact">Contact</a>
