included bootstrap 4 with ngxbootstrap, now it works well

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navbar bg-dark">
   <a routerLink="/home">Home</a>
   <a routerLink="/werkwijze">Werkwijze</a>
   <a routerLink="/tarieven">Tarieven</a>
