added first version content to homepage, aboutpage and werkwijze-page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,9 @@
-<p>
-  about works!
-</p>
+<div id="about" class="p-3">
+  <div class="container border">
+    <p>
+      Ik volg de opleiding Natuurgeneeskunde.
+      Dit is een professionele en holistische opleiding.
+      Na de zomer begin ik aan het 4e jaar (totaal 5 jarige opleiding).
+    </p>
+  </div>
+</div>
