--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div id="home" class="p-3">
+  <div class="container border">
+    <h1 class="mx-auto text-center">Welkom!</h1>
+    <img class="img-fluid mx-auto d-block" src="assets/images/natuurgeneeskunde-welcome.jpg" alt="image">
+  </div>
+</div>
