--- a/src/app/components/werkwijze/werkwijze.component.html
+++ b/src/app/components/werkwijze/werkwijze.component.html
@@ -1,3 +1,17 @@
-<p>
-  werkwijze works!
-</p>
+<div id="werkwijze" class="p-3">
+  <div class="container border">
+    <p>Mijn werkwijze is aansluiting zoeken bij het zelfgenezend
+       vermogen van de client en dit versterken waardoor de client
+       zelf van zijn of haar klacht af kan komen en zich energieker voelt.
+       Hierbij maak ik gebruik van de volgende onderdelen:
+    </p>
+    <ul>
+      <li>Afnemen anamnese</li>
+      <li>Voeding</li>
+      <li>Bachbloesem</li>
+      <li>Lichaamsverzorging (o.a. massage, schropfen, leempakkingen)</li>
+      <li>Iriscopie</li>
+      <li>Fytotherapie</li>
+    </ul>
+  </div>
+</div>
