--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar bg-dark">
-  <a routerLink="/home">Home</a>
-  <a routerLink="/werkwijze">Werkwijze</a>
-  <a routerLink="/tarieven">Tarieven</a>
-  <a routerLink="/about">Over mij</a>
-  <a routerLink="/contact">Contact</a>
+<nav class="navbar bg-light">
+  <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+  <a class="nav-link" routerLink="/werkwijze" routerLinkActive="active">Werkwijze</a>
+  <a class="nav-link" routerLink="/tarieven" routerLinkActive="active">Tarieven</a>
+  <a class="nav-link" routerLink="/about" routerLinkActive="active">Over mij</a>
+  <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
 </nav>
