--- a/src/app/components/tarieven/tarieven.component.html
+++ b/src/app/components/tarieven/tarieven.component.html
@@ -1,3 +1,7 @@
-<p>
-  tarieven works!
-</p>
+<div id="tarieven" class="p-3">
+  <div class="container border">
+    <p>
+      Meer informatie over de tarieven volgt nog
+    </p>
+  </div>
+</div>
