--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,11 +1,25 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerNatuurgeneeskunde" aria-controls="navbarTogglerNatuurgeneeskunde" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerNatuurgeneeskunde" aria-controls="navbarTogglerNatuurgeneeskunde" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button> -->
-    <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-    <a class="nav-link" routerLink="/werkwijze" routerLinkActive="active">Werkwijze</a>
-    <a class="nav-link" routerLink="/tarieven" routerLinkActive="active">Tarieven</a>
-    <a class="nav-link" routerLink="/about" routerLinkActive="active">Over mij</a>
-    <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerNatuurgeneeskunde">
+    <ul class="navbar-nav m-auto">
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+      </li>
+      <li>
+        <a class="nav-link" routerLink="/werkwijze" routerLinkActive="active">Werkwijze</a>
+      </li>
+      <li>
+        <a class="nav-link" routerLink="/tarieven" routerLinkActive="active">Tarieven</a>
+      </li>
+      <li>
+        <a class="nav-link" routerLink="/about" routerLinkActive="active">Over mij</a>
+      </li>
+      <li>
+        <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
+      </li>
+    </ul>
+  </div>
 </nav>
